# iot-test-protocol

./: README.md  pyproject.toml
src/: __init__.py  structures.py  test_protocol.py
tests/: test_protocol.py
